# reelforge-ai

./: .codegraph.yml  .dockerignore  .gitignore  DEPLOY.md  Dockerfile  HANDOFF.md  README.md  docker-entrypoint.sh  fly.toml  package-lock.json  package.json  remotion.config.ts
public/music/: README.md
public/voice-options/: index.html
public/voice-options-v2/: index.html
scripts/: chatterbox-test.mjs  cinemagraph-demo.mjs  depthflow-demo.mjs  df_scene.py  drive-run.mjs  eleven-sample.mjs  gen-depth.mjs  gen-image.mjs  gen-mask.mjs  gen-music.mjs  generate-placeholder-music.sh  motion-meter.py  see-video.mjs  segmind-gen.mjs  voice-bakeoff.mjs  voice-options.mjs
scripts/tts-service/: README.md  app.py  engines.py  pyproject.toml  translit.py
src/app/: globals.css  layout.tsx
src/app/(app)/: layout.tsx  page.tsx
src/components/create/: Stepper.tsx
src/components/layout/: Logo.tsx  Sidebar.tsx  Topbar.tsx
src/components/studio/: RunStepper.tsx  StepGateActions.tsx
src/components/ui/: StatusBadge.tsx  Thumb.tsx  Waveform.tsx
src/lib/: api.ts  claude.ts  data.ts  db.ts  depth.ts  depthflow.ts  duration.ts  fal.ts  ideation.ts  ids.ts  inpaint.ts  llm.ts  matte.ts  music-gen.ts  music.ts  paths.ts  products.ts  profile.ts  remotion-render.ts  runs.ts  scene-images.ts  segment.ts  segmind.ts  speech-plan.ts  storyboard.ts  translit.ts  tts.ts  types.ts  veo.ts
src/remotion/: DeviceFrame.tsx  KineticCaption.tsx  LayeredScene.tsx  Outro.tsx  ReelComposition.tsx  Root.tsx  showcase-entry.tsx  types.ts
src/remotion/cinemagraph/: Cinemagraph.tsx
(+79 files in other folders)
