[project]
name = "reelforge-tts"
version = "0.1.0"
description = "Local free TTS microservice for ReelForge (parler / kokoro / indicf5)"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "numpy>=1.26",
    "soundfile>=0.12",
    "torch>=2.4",
    "transformers>=4.46",
    "sentencepiece>=0.2",
    # Engines (heavy — installed on demand; see README):
    #   parler-tts  -> `uv add "parler-tts @ git+https://github.com/huggingface/parler-tts.git"`
    #   kokoro      -> `uv add kokoro`
    #   indicf5     -> `uv add "indicf5 @ git+https://github.com/AI4Bharat/IndicF5"`
    #   translit    -> `uv add ai4bharat-transliteration`
    "parler-tts",
    "kokoro>=0.9.4",
    "ai4bharat-transliteration>=1.1.3",
]

[tool.uv]

[tool.uv.sources]
parler-tts = { git = "https://github.com/huggingface/parler-tts.git" }
# Pin a Python that has torch/transformers wheels (system is 3.14, too new).
# `uv run` will provision this automatically.
